Importing modules and data

--- a/Condition Monitoring of Hydraulic System/Linear_Regression.ipynb
+++ b/Condition Monitoring of Hydraulic System/Linear_Regression.ipynb
@@ -429,8 +429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "55063c2a",
+   "execution_count": 5,
+   "id": "ac3d77d0",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,8 +454,319 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a3af88f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>PS1</th>\n",
+       "      <th>PS2</th>\n",
+       "      <th>PS3</th>\n",
+       "      <th>PS4</th>\n",
+       "      <th>PS5</th>\n",
+       "      <th>PS6</th>\n",
+       "      <th>FS1</th>\n",
+       "      <th>FS2</th>\n",
+       "      <th>TS1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>P1</th>\n",
+       "      <th>VS1</th>\n",
+       "      <th>CE1</th>\n",
+       "      <th>CP1</th>\n",
+       "      <th>SE1</th>\n",
+       "      <th>y_coolerCondition</th>\n",
+       "      <th>y_valveCondition</th>\n",
+       "      <th>y_pumpLeak</th>\n",
+       "      <th>y_hydraulicAcc</th>\n",
+       "      <th>y_stableFlag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1102.000000</td>\n",
+       "      <td>160.485315</td>\n",
+       "      <td>109.379906</td>\n",
+       "      <td>1.753227</td>\n",
+       "      <td>2.600266</td>\n",
+       "      <td>9.163320</td>\n",
+       "      <td>9.079363</td>\n",
+       "      <td>6.198549</td>\n",
+       "      <td>9.649453</td>\n",
+       "      <td>45.424567</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2495.509203</td>\n",
+       "      <td>0.613315</td>\n",
+       "      <td>31.299077</td>\n",
+       "      <td>1.808399</td>\n",
+       "      <td>55.287900</td>\n",
+       "      <td>41.240816</td>\n",
+       "      <td>90.693878</td>\n",
+       "      <td>0.669388</td>\n",
+       "      <td>107.199546</td>\n",
+       "      <td>0.342857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>636.672993</td>\n",
+       "      <td>4.699425</td>\n",
+       "      <td>4.986585</td>\n",
+       "      <td>0.251902</td>\n",
+       "      <td>4.279355</td>\n",
+       "      <td>0.576296</td>\n",
+       "      <td>0.549589</td>\n",
+       "      <td>1.032883</td>\n",
+       "      <td>0.449246</td>\n",
+       "      <td>7.991933</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73.836682</td>\n",
+       "      <td>0.060260</td>\n",
+       "      <td>11.575330</td>\n",
+       "      <td>0.278263</td>\n",
+       "      <td>8.960189</td>\n",
+       "      <td>42.383143</td>\n",
+       "      <td>10.681802</td>\n",
+       "      <td>0.817233</td>\n",
+       "      <td>16.435848</td>\n",
+       "      <td>0.474772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>155.391547</td>\n",
+       "      <td>104.406307</td>\n",
+       "      <td>0.840252</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.365801</td>\n",
+       "      <td>8.321527</td>\n",
+       "      <td>2.018572</td>\n",
+       "      <td>8.857513</td>\n",
+       "      <td>35.313783</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2361.747267</td>\n",
+       "      <td>0.524367</td>\n",
+       "      <td>17.555983</td>\n",
+       "      <td>1.062150</td>\n",
+       "      <td>18.276617</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>551.000000</td>\n",
+       "      <td>158.100195</td>\n",
+       "      <td>106.962382</td>\n",
+       "      <td>1.729733</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.547239</td>\n",
+       "      <td>8.487167</td>\n",
+       "      <td>6.391670</td>\n",
+       "      <td>9.203397</td>\n",
+       "      <td>36.237150</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2442.933467</td>\n",
+       "      <td>0.555100</td>\n",
+       "      <td>20.084650</td>\n",
+       "      <td>1.550100</td>\n",
+       "      <td>56.270183</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1102.000000</td>\n",
+       "      <td>158.960895</td>\n",
+       "      <td>107.730169</td>\n",
+       "      <td>1.779630</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.115781</td>\n",
+       "      <td>9.031516</td>\n",
+       "      <td>6.576673</td>\n",
+       "      <td>9.692270</td>\n",
+       "      <td>44.836650</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2480.926633</td>\n",
+       "      <td>0.610183</td>\n",
+       "      <td>27.392533</td>\n",
+       "      <td>1.739683</td>\n",
+       "      <td>58.758150</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1653.000000</td>\n",
+       "      <td>161.000735</td>\n",
+       "      <td>109.421612</td>\n",
+       "      <td>1.932047</td>\n",
+       "      <td>3.503266</td>\n",
+       "      <td>9.844351</td>\n",
+       "      <td>9.729275</td>\n",
+       "      <td>6.657508</td>\n",
+       "      <td>10.155008</td>\n",
+       "      <td>54.104317</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2548.211467</td>\n",
+       "      <td>0.649850</td>\n",
+       "      <td>46.677383</td>\n",
+       "      <td>2.148483</td>\n",
+       "      <td>59.656900</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2204.000000</td>\n",
+       "      <td>180.922708</td>\n",
+       "      <td>131.589089</td>\n",
+       "      <td>2.023398</td>\n",
+       "      <td>10.207068</td>\n",
+       "      <td>9.978511</td>\n",
+       "      <td>9.856591</td>\n",
+       "      <td>6.722707</td>\n",
+       "      <td>10.403098</td>\n",
+       "      <td>57.899283</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2740.641000</td>\n",
+       "      <td>0.839067</td>\n",
+       "      <td>47.903667</td>\n",
+       "      <td>2.840100</td>\n",
+       "      <td>60.755300</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0          PS1          PS2          PS3          PS4  \\\n",
+       "count  2205.000000  2205.000000  2205.000000  2205.000000  2205.000000   \n",
+       "mean   1102.000000   160.485315   109.379906     1.753227     2.600266   \n",
+       "std     636.672993     4.699425     4.986585     0.251902     4.279355   \n",
+       "min       0.000000   155.391547   104.406307     0.840252     0.000000   \n",
+       "25%     551.000000   158.100195   106.962382     1.729733     0.000000   \n",
+       "50%    1102.000000   158.960895   107.730169     1.779630     0.000000   \n",
+       "75%    1653.000000   161.000735   109.421612     1.932047     3.503266   \n",
+       "max    2204.000000   180.922708   131.589089     2.023398    10.207068   \n",
+       "\n",
+       "               PS5          PS6          FS1          FS2          TS1  ...  \\\n",
+       "count  2205.000000  2205.000000  2205.000000  2205.000000  2205.000000  ...   \n",
+       "mean      9.163320     9.079363     6.198549     9.649453    45.424567  ...   \n",
+       "std       0.576296     0.549589     1.032883     0.449246     7.991933  ...   \n",
+       "min       8.365801     8.321527     2.018572     8.857513    35.313783  ...   \n",
+       "25%       8.547239     8.487167     6.391670     9.203397    36.237150  ...   \n",
+       "50%       9.115781     9.031516     6.576673     9.692270    44.836650  ...   \n",
+       "75%       9.844351     9.729275     6.657508    10.155008    54.104317  ...   \n",
+       "max       9.978511     9.856591     6.722707    10.403098    57.899283  ...   \n",
+       "\n",
+       "                P1          VS1          CE1          CP1          SE1  \\\n",
+       "count  2205.000000  2205.000000  2205.000000  2205.000000  2205.000000   \n",
+       "mean   2495.509203     0.613315    31.299077     1.808399    55.287900   \n",
+       "std      73.836682     0.060260    11.575330     0.278263     8.960189   \n",
+       "min    2361.747267     0.524367    17.555983     1.062150    18.276617   \n",
+       "25%    2442.933467     0.555100    20.084650     1.550100    56.270183   \n",
+       "50%    2480.926633     0.610183    27.392533     1.739683    58.758150   \n",
+       "75%    2548.211467     0.649850    46.677383     2.148483    59.656900   \n",
+       "max    2740.641000     0.839067    47.903667     2.840100    60.755300   \n",
+       "\n",
+       "       y_coolerCondition  y_valveCondition   y_pumpLeak  y_hydraulicAcc  \\\n",
+       "count        2205.000000       2205.000000  2205.000000     2205.000000   \n",
+       "mean           41.240816         90.693878     0.669388      107.199546   \n",
+       "std            42.383143         10.681802     0.817233       16.435848   \n",
+       "min             3.000000         73.000000     0.000000       90.000000   \n",
+       "25%             3.000000         80.000000     0.000000       90.000000   \n",
+       "50%            20.000000        100.000000     0.000000      100.000000   \n",
+       "75%           100.000000        100.000000     1.000000      130.000000   \n",
+       "max           100.000000        100.000000     2.000000      130.000000   \n",
+       "\n",
+       "       y_stableFlag  \n",
+       "count   2205.000000  \n",
+       "mean       0.342857  \n",
+       "std        0.474772  \n",
+       "min        0.000000  \n",
+       "25%        0.000000  \n",
+       "50%        0.000000  \n",
+       "75%        1.000000  \n",
+       "max        1.000000  \n",
+       "\n",
+       "[8 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ac3d77d0",
+   "id": "8e2921ca",
    "metadata": {},
    "outputs": [],
    "source": []
