Splitting dataset into train and test

--- a/Condition Monitoring of Hydraulic System/Linear_Regression.ipynb
+++ b/Condition Monitoring of Hydraulic System/Linear_Regression.ipynb
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a3af88f",
+   "id": "0d279b4f",
    "metadata": {},
    "outputs": [
     {
@@ -764,12 +764,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e2921ca",
+   "cell_type": "markdown",
+   "id": "a3281303",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Assigning valu"
+   ]
   }
  ],
  "metadata": {
