Splitting dataset into train and test

--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7085b7bc",
+   "id": "97da04e2",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "79ef806a",
+   "execution_count": 28,
+   "id": "a3fe0b37",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3591df5d",
+   "id": "88f332f2",
    "metadata": {},
    "source": [
     "# Loading datset"
@@ -30,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "555fa2ff",
+   "execution_count": 29,
+   "id": "551d4d9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "9ddf991c",
+   "execution_count": 30,
+   "id": "405bec90",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +415,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "fc57c74b",
+   "execution_count": 31,
+   "id": "c47c5976",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +440,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,8 +451,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7f434072",
+   "execution_count": 32,
+   "id": "5de1620a",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +751,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2905e20a",
+   "id": "d3f81c1b",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -769,8 +770,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "0374b26a",
+   "execution_count": 33,
+   "id": "613d44a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,8 +783,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "a9c29587",
+   "execution_count": 34,
+   "id": "70c02e7d",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1096,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,8 +1107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f57af3ef",
+   "execution_count": 35,
+   "id": "2f68ec23",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1263,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,12 +1273,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11361720",
+   "metadata": {},
+   "source": [
+    "# Splitting dataset to train and test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45167f0a",
+   "id": "c5e15ee2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, ran)"
+   ]
   }
  ],
  "metadata": {
