--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee228efb",
+   "id": "be540d52",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "dea6fb89",
+   "id": "0c948dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135241a0",
+   "id": "eb96ac1d",
    "metadata": {},
    "source": [
     "# Loading datset"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "eb7ba436",
+   "id": "a3ce2bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0bfeef63",
+   "id": "59f5ced0",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b5f20204",
+   "id": "a808fe10",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "45082869",
+   "id": "c9674a59",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40b7984d",
+   "id": "b96fa25f",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c33ab7d7",
+   "id": "5ad0048b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "95ad7f0c",
+   "id": "33501b10",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f7316c06",
+   "id": "55158e3f",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "271cb716",
+   "id": "2db4071d",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1284,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "8d5b4158",
+   "id": "ef499727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a5bfe68d",
+   "id": "541cbcc9",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "76e4980a",
+   "id": "133b41cd",
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5fb3370c",
+   "id": "86ccdae4",
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9840343c",
+   "id": "e6e4a6bc",
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2fa71ed",
+   "id": "a01b0eae",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2284,7 +2284,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "fc59af9d",
+   "id": "30aeff95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2296,9 +2296,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13c88317",
+   "metadata": {},
+   "source": [
+    "# Fit each classifier on the corresponding target variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "15e55f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "MultinomialNB()"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_cooler.fit(X_train, y_train['y_coolerCondition'])\n",
+    "nb_valve.fit(X_train, y_train['y_valveCondition'])\n",
+    "nb_pump.fit(X_train, y_train['y_pumpLeak'])\n",
+    "nb_hydraulic.fit(X_train, y_train['y_hydraulicAcc'])\n",
+    "nb_stable.fit(X_train, y_train['y_stableFlag'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ae52c4",
+   "id": "df896e2c",
    "metadata": {},
    "outputs": [],
    "source": []
