Evaluate the performance for each classifier

--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be540d52",
+   "id": "300a24ae",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0c948dd1",
+   "id": "68b64a10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb96ac1d",
+   "id": "10816b29",
    "metadata": {},
    "source": [
     "# Loading datset"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a3ce2bb9",
+   "id": "851df9c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "59f5ced0",
+   "id": "a70c09d2",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "a808fe10",
+   "id": "12f34820",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c9674a59",
+   "id": "82259fc7",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b96fa25f",
+   "id": "4e952f2b",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "5ad0048b",
+   "id": "129e909c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "33501b10",
+   "id": "2c51c2f8",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "55158e3f",
+   "id": "d04595c5",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db4071d",
+   "id": "720b3c3c",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1284,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "ef499727",
+   "id": "d2132c42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "541cbcc9",
+   "id": "cf946715",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "133b41cd",
+   "id": "690f43c9",
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "86ccdae4",
+   "id": "78e84244",
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "e6e4a6bc",
+   "id": "5171274e",
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01b0eae",
+   "id": "2ed33d38",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2284,7 +2284,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "30aeff95",
+   "id": "dade1674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13c88317",
+   "id": "41a853e0",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2306,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "15e55f31",
+   "id": "0cb64c18",
    "metadata": {},
    "outputs": [
     {
@@ -2332,9 +2332,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc0911ee",
+   "metadata": {},
+   "source": [
+    "# Make predictions on the test data for each classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "f9ad0abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_cooler = nb_cooler.predict(X_test)\n",
+    "y_pred_valve = nb_valve.predict(X_test)\n",
+    "y_pred_pump = nb_pump.predict(X_test)\n",
+    "y_pred_hydraulic = nb_hydraulic.predict(X_test)\n",
+    "y_pred_stable = nb_stable.predict(X_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df896e2c",
+   "id": "a9820c71",
    "metadata": {},
    "outputs": [],
    "source": []
