--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "300a24ae",
+   "id": "98c60de3",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "68b64a10",
+   "execution_count": 120,
+   "id": "6bef5639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import MultinomialNB"
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10816b29",
+   "id": "c66f2d96",
    "metadata": {},
    "source": [
     "# Loading datset"
@@ -32,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "851df9c1",
+   "execution_count": 121,
+   "id": "dda512ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "a70c09d2",
+   "execution_count": 122,
+   "id": "a29ea93a",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +417,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,8 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "12f34820",
+   "execution_count": 123,
+   "id": "74ef7128",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +442,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,8 +453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "82259fc7",
+   "execution_count": 124,
+   "id": "bf3cc79d",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +753,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e952f2b",
+   "id": "7fc46792",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -771,8 +772,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "129e909c",
+   "execution_count": 125,
+   "id": "3b156ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,8 +785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "2c51c2f8",
+   "execution_count": 126,
+   "id": "a5724558",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1098,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,8 +1109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "d04595c5",
+   "execution_count": 127,
+   "id": "26a763f2",
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1265,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720b3c3c",
+   "id": "5b6363fe",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1283,8 +1284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "d2132c42",
+   "execution_count": 128,
+   "id": "bbd6e4ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,8 +1294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "cf946715",
+   "execution_count": 129,
+   "id": "ba0c4f77",
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1607,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,8 +1618,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "690f43c9",
+   "execution_count": 130,
+   "id": "99375945",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1774,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,8 +1785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "78e84244",
+   "execution_count": 131,
+   "id": "8ba05725",
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2098,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,8 +2109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "5171274e",
+   "execution_count": 132,
+   "id": "5cc138ba",
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2265,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed33d38",
+   "id": "fdb4bcd9",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2283,8 +2284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "dade1674",
+   "execution_count": 133,
+   "id": "bf74def5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,7 +2298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a853e0",
+   "id": "6d136ff5",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2305,20 +2306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "0cb64c18",
+   "execution_count": 134,
+   "id": "458d3718",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "MultinomialNB()"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,7 +2334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0911ee",
+   "id": "38b68c17",
    "metadata": {},
    "source": [
     "# Make predictions on the test data for each classifier"
@@ -2341,8 +2342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "f9ad0abe",
+   "execution_count": 135,
+   "id": "e864672e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2354,9 +2355,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d3f75e3",
+   "metadata": {},
+   "source": [
+    "# Evaluate the performance for each classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "8834e7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cooler = accuracy_score(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "accuracy_valve = accuracy_score(y_test['y_valveCondition'], y_pred_valve)\n",
+    "accuracy_pump = accuracy_score(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "accuracy_hydraulic = accuracy_score(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "accuracy_stable = accuracy_score(y_test['y_stableFlag'], y_pred_stable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "14906eea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy - Cooler Condition: 0.98\n",
+      "Accuracy - Valve Condition: 0.46\n",
+      "Accuracy - Pump Leak: 0.55\n",
+      "Accuracy - Hydraulic Acc: 0.45\n",
+      "Accuracy - Stable Flag: 0.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print results\n",
+    "print(f'Accuracy - Cooler Condition: {accuracy_cooler:.2f}')\n",
+    "print(f'Accuracy - Valve Condition: {accuracy_valve:.2f}')\n",
+    "print(f'Accuracy - Pump Leak: {accuracy_pump:.2f}')\n",
+    "print(f'Accuracy - Hydraulic Acc: {accuracy_hydraulic:.2f}')\n",
+    "print(f'Accuracy - Stable Flag: {accuracy_stable:.2f}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9820c71",
+   "id": "b1ac583e",
    "metadata": {},
    "outputs": [],
    "source": []
