--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -21,6 +21,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "import seaborn as sns\n",
+    "from sklearn.metrics import roc_curve, auc\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
    ]
   },
@@ -2742,9 +2743,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef742ea3",
+   "metadata": {},
+   "source": [
+    "# Function to plot ROC curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "44189c9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_roc_curve(y_true, y_score, title):\n",
+    "    fpr, tpr, _ = roc_curve(y_true, y_score)\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.plot(fpr, tpr, color='darkorange', lw=2, label=f'ROC curve (area = {roc_auc:.2f})')\n",
+    "    plt.plot([0, 1], [0, 1], color='navy', lw=2, linestyle='--')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.title(title)\n",
+    "    plt.legend(loc='lower right')\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44189c9a",
+   "id": "89a3b983",
    "metadata": {},
    "outputs": [],
    "source": []
