Get probability scores for each class

--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -2744,7 +2744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef742ea3",
+   "id": "782dc78d",
    "metadata": {},
    "source": [
     "# Function to plot ROC curve"
@@ -2752,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44189c9a",
    "metadata": {},
    "outputs": [],
@@ -2772,9 +2772,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21ca0aa8",
+   "metadata": {},
+   "source": [
+    "# Get probability scores for each class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f63b1ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nb_cooler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m y_prob_cooler \u001b[38;5;241m=\u001b[39m nb_cooler\u001b[38;5;241m.\u001b[39mpredict_proba(X_test)[:, \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      2\u001b[0m y_prob_valve \u001b[38;5;241m=\u001b[39m nb_valve\u001b[38;5;241m.\u001b[39mpredict_proba(X_test)[:, \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      3\u001b[0m y_prob_pump \u001b[38;5;241m=\u001b[39m nb_pump\u001b[38;5;241m.\u001b[39mpredict_proba(X_test)[:, \u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nb_cooler' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "y_prob_cooler = nb_cooler.predict_proba(X_test)[:, 1]\n",
+    "y_prob_valve = nb_valve.predict_proba(X_test)[:, 1]\n",
+    "y_prob_pump = nb_pump.predict_proba(X_test)[:, 1]\n",
+    "y_prob_hydraulic = nb_hydraulic.predict_proba(X_test)[:, 1]\n",
+    "y_prob_stable = nb_stable.predict_proba(X_test)[:, 1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a3b983",
+   "id": "0dc69480",
    "metadata": {},
    "outputs": [],
    "source": []
