Evaluate each output variable separately

--- a/Condition Monitoring of Hydraulic System/SVM.ipynb
+++ b/Condition Monitoring of Hydraulic System/SVM.ipynb
@@ -2317,9 +2317,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef7d5e62",
+   "metadata": {},
+   "source": [
+    "# Assigning values to y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b69d1167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = multi_output_classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd48bd03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100, 100,   0,  90,   0],\n",
+       "       [ 20, 100,   0,  90,   0],\n",
+       "       [ 20, 100,   0,  90,   0],\n",
+       "       ...,\n",
+       "       [ 20, 100,   0,  90,   0],\n",
+       "       [100, 100,   0,  90,   0],\n",
+       "       [ 20, 100,   0,  90,   0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4b55c08",
+   "id": "ee215336",
    "metadata": {},
    "outputs": [],
    "source": []
