Initialize and fit classifiers for each target variable

--- a/Condition Monitoring of Hydraulic System/RandomForest.ipynb
+++ b/Condition Monitoring of Hydraulic System/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "77333090",
+   "id": "3ac0fb00",
    "metadata": {},
    "source": [
     "# Importing Modules"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1f156a49",
+   "execution_count": 15,
+   "id": "fb3f8630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf5d81e",
+   "id": "62e8a537",
    "metadata": {},
    "source": [
     "# Loading Dataset"
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3f6973ce",
+   "execution_count": 16,
+   "id": "069c5b4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "49434de7",
+   "execution_count": 17,
+   "id": "7e8e994e",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2d91816b",
+   "execution_count": 18,
+   "id": "c2d7b7f5",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,8 +455,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c8672e9b",
+   "execution_count": 19,
+   "id": "fee5f379",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9381ef39",
+   "id": "cb9187fe",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -774,8 +774,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ec713d70",
+   "execution_count": 20,
+   "id": "4a1e3c4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,8 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "85ae2a3c",
+   "execution_count": 21,
+   "id": "855be030",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,8 +1111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "dfa53699",
+   "execution_count": 22,
+   "id": "ea8b042b",
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e21c658",
+   "id": "cbe00ec2",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1286,8 +1286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a4b0fb90",
+   "execution_count": 23,
+   "id": "ea6a173b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,8 +1296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2a85eac4",
+   "execution_count": 24,
+   "id": "36c2b580",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,8 +1620,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c93e6e97",
+   "execution_count": 25,
+   "id": "d25fcba3",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,8 +1787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fc2dd7eb",
+   "execution_count": 26,
+   "id": "d2e6aaf7",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,8 +2111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ed81e001",
+   "execution_count": 27,
+   "id": "a1d43e1f",
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,12 +2277,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f42b9f1",
+   "metadata": {},
+   "source": [
+    "# Initialize separate classifiers for each target variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "208d0ff2",
+   "execution_count": 28,
+   "id": "9e5b3328",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nb_cooler = RandomForestClassifier(n_estimators=100)\n",
+    "nb_valve = RandomForestClassifier(n_estimators=100)\n",
+    "nb_pump = RandomForestClassifier(n_estimators=100)\n",
+    "nb_hydraulic = RandomForestClassifier(n_estimators=100)\n",
+    "nb_stable = RandomForestClassifier(n_estimators=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb08659c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fit each classifier on the corresponding target variable"
+   ]
   }
  ],
  "metadata": {
